<resources>
    <string name="app_name">Linkalk</string>
    <string name="title_friend">친구</string>
    <string name="title_new_friend">추천 친구</string>
    <string name="title_chat">채팅방</string>
    <string name="title_setting">설정</string>

    <string name="text_id">ID :</string>
    <string name="input_id">가입하신 E-mail을 입력하세요</string>
    <string name="text_pw">P/W :</string>
    <string name="input_pw">P/W를 입력하세요</string>
    <string name="go_to_member_join">Linkalk을 처음 이용합니다.</string>
    <string name="login">Login</string>

    <string name="member_join">MEMBER JOIN</string>
    <string name="member_mail">E-mail</string>
    <string name="member_family_name">Family Name</string>
    <string name="member_given_name">Last Name</string>
    <string name="member_pw">Password</string>
    <string name="member_pwcon">Password Check</string>
    <string name="member_nickname">Your Nickname</string>
    <string name="member_language">Select your language</string>
    <string name="member_modify">회원 정보 수정</string>
    <string name="member_withdraw">회원 탈퇴</string>

    <!--ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ-->
    <string name="toast_hint_gallery">Pick from gallery</string>
    <string name="toast_hint_camera">Use the camera</string>
    <string name="toast_hint_filter">Apply photo effects</string>
    <string name="toast_hint_edit">Flip/rotate the photo</string>
    <string name="toast_hint_save">Save the photo</string>

    <!-- Filter names -->
    <string name="filter_original">Original</string>
    <string name="filter_instafix">Instafix</string>
    <string name="filter_ansel">Ansel</string>
    <string name="filter_testino">Testino</string>
    <string name="filter_xpro">XPro</string>
    <string name="filter_bw">Black &amp; White</string>
    <string name="filter_sepia">Sepia</string>
    <string name="filter_cyano">Cyano</string>
    <string name="filter_retro">Retro</string>
    <string name="filter_georgia">Georgia</string>
    <string name="filter_sahara">Sahara</string>
    <string name="filter_hdr">HDR</string>

    <!-- Edit actions -->
    <string name="edit_action_flip">Flip</string>
    <string name="edit_action_rotate_90_right">Rotate 90° Right</string>
    <string name="edit_action_rotate_90_left">Rotate 90° Left</string>
    <string name="edit_action_rotate_180">Rotate 180°</string>

    <!-- Progress Dialogs -->
    <string name="reverting_to_original">Reverting to original&#8230;</string>
    <string name="applying_filter">Applying %s filter&#8230;</string>
    <string name="flipping">Flipping horizontally&#8230;</string>
    <string name="rotating_90_right">Rotating 90° right&#8230;</string>
    <string name="rotating_90_left">Rotating 90° left&#8230;</string>
    <string name="rotating_180">Rotating 180°&#8230;</string>

    <!-- Save action -->
    <string name="saved_photo_toast_message">Saved photo to %s</string>
    <!--ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ-->

    <string name="ok">확  인</string>
    <!--Facebook Sign-in Start-->
    <string name="facebook_app_id">239780206511777</string>
    <string name="fb_login_protocol_scheme">fb239780206511777</string>
    <!--Facebook Sign-in End-->

</resources>
