<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/parent_of_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/btn_friend"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@drawable/vp_text_color_selector"
            android:background="@drawable/vp_bg_color_selector"
            android:text="@string/title_friend" />
        <TextView
            android:id="@+id/btn_newfriend"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@drawable/vp_text_color_selector"
            android:background="@drawable/vp_bg_color_selector"
            android:text="@string/title_new_friend" />
        <TextView
            android:id="@+id/btn_chat"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@drawable/vp_text_color_selector"
            android:background="@drawable/vp_bg_color_selector"
            android:text="@string/title_chat" />
        <TextView
            android:id="@+id/btn_setting"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@drawable/vp_text_color_selector"
            android:background="@drawable/vp_bg_color_selector"
            android:text="@string/title_setting" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/parent_of_viewpager">
    </android.support.v4.view.ViewPager>

</RelativeLayout>


<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:id="@+id/container"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--tools:context="com.together.linkalk.MainActivity">-->

    <!--<FrameLayout-->
        <!--android:id="@+id/content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1">-->

        <!--<TextView-->
            <!--android:id="@+id/message"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
            <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
            <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:text="@string/title_friend" />-->

    <!--</FrameLayout>-->

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:menu="@menu/navigation" />-->

<!--</LinearLayout>-->
