<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/member_join_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/member_join"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:id="@+id/mailll"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/member_join_title">
        <ImageView
            android:id="@+id/mailimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mail_img"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/member_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/mailimg"
            android:hint="E-mail"
            android:paddingLeft="12dp"
            android:layout_marginLeft="12dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/no_email_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO!!! E-mail 형식에 맞지 않습니다."
        android:layout_below="@id/mailll"
        android:layout_centerHorizontal="true"
        android:textColor="#ff1111"/>
    <LinearLayout
        android:id="@+id/pwll"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/mailll">
        <ImageView
            android:id="@+id/pwimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/locked_img"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/member_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/pwimg"
            android:hint="@string/member_pw"
            android:paddingLeft="12dp"
            android:layout_marginLeft="12dp"
            android:inputType="textPassword"/>
    </LinearLayout>
    <TextView
        android:id="@+id/no_pwd_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO!!! 비밀번호 형식에 맞춰주세요."
        android:layout_below="@id/pwll"
        android:layout_centerHorizontal="true"
        android:textColor="#ff1111"/>
    <LinearLayout
        android:id="@+id/pwconll"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/pwll">
        <ImageView
            android:id="@+id/pwconimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/locked_img"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/member_password_con"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/pwimg"
            android:hint="@string/member_pwcon"
            android:paddingLeft="12dp"
            android:layout_marginLeft="12dp"
            android:inputType="textPassword"/>
    </LinearLayout>
    <TextView
        android:id="@+id/no_pwdcon_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO!!! 비밀번호가 일치하지 않습니다."
        android:layout_below="@id/pwconll"
        android:layout_centerHorizontal="true"
        android:textColor="#ff1111"/>
    <LinearLayout
        android:id="@+id/namell"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/pwconll">
        <ImageView
            android:id="@+id/nameimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/name_img"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/member_given_name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/nameimg"
            android:hint="@string/member_given_name"
            android:paddingLeft="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="7"/>
        <EditText
            android:id="@+id/member_family_name"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/nameimg"
            android:hint="@string/member_family_name"
            android:paddingLeft="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="4"/>
    </LinearLayout>
    <TextView
        android:id="@+id/no_name_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO!!! 사용할 수 없는 이름입니다."
        android:layout_below="@id/namell"
        android:layout_centerHorizontal="true"
        android:textColor="#ff1111"/>
    <LinearLayout
        android:id="@+id/nickll"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/namell">
        <ImageView
            android:id="@+id/nickimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/nickname_img"
            android:layout_gravity="center_vertical"/>
        <EditText
            android:id="@+id/member_nickname"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/nameimg"
            android:hint="@string/member_nickname"
            android:paddingLeft="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="5"/>
        <Button
            android:id="@+id/member_nickname_check_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="check"
            android:textSize="15sp"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/member_nickname_ok"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/nameimg"
            android:paddingLeft="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="5"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/member_nickname_check_btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="modify"
            android:textSize="15sp"
            android:visibility="gone"/>
    </LinearLayout>
    <TextView
        android:id="@+id/ok_nick_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OK!!! 사용할 수 있는 닉네임입니다."
        android:layout_below="@id/nickll"
        android:layout_centerHorizontal="true"
        android:textColor="#ff1111"/>
    <TextView
        android:id="@+id/no_nick_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO!!! 사용할 수 없는 닉네임입니다."
        android:layout_below="@id/nickll"
        android:layout_centerHorizontal="true"
        android:textColor="#ff1111"/>
    <LinearLayout
        android:id="@+id/homell"
        android:layout_width="380dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/nickll">
        <ImageView
            android:id="@+id/languageimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/language_img"
            android:layout_gravity="center_vertical"/>
        <Spinner
            android:id="@+id/member_language"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_toRightOf="@id/languageimg"
            android:entries="@array/lanaguage"
            android:paddingLeft="12dp"
            android:layout_marginLeft="12dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/no_lan_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NO!!! 사용할 수 없는 언어입니다."
        android:layout_below="@id/homell"
        android:layout_centerHorizontal="true"
        android:textColor="#ff1111"/>

    <Button
        android:id="@+id/member_join"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:text="@string/ok"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"/>

    
</RelativeLayout>